# ccgotchi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  package_macos.sh
.github/workflows/: ci.yml  release.yml
gui/: Cargo.toml  tauri.conf.json
gui/capabilities/: default.json
gui/src/: main.rs
src/: lib.rs  main.rs
