[package]
name = "ccgotchi-app"
version = "0.1.0"
edition = "2021"
description = "ccgotchi tray app — configure your Claude Code pet statusline from the menu bar"

[[bin]]
name = "ccgotchi-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
ccgotchi = { path = ".." }
serde_json = "1"
